Добавлены стили для кнопок и вывода карточек с кофе

--- a/src/app/componentns/list-coffee/list-coffee.component.html
+++ b/src/app/componentns/list-coffee/list-coffee.component.html
@@ -1,5 +1,5 @@
 <div>
-  <button mat-button routerLink='/order'>Корзина</button>
+  <button mat-button routerLink='/order' class="btn-card">Корзина</button>
 </div>
 
 <mat-grid-list cols="2" rowHeight="1:1">
