--- a/src/app/componentns/list-coffee/list-coffee.component.css
+++ b/src/app/componentns/list-coffee/list-coffee.component.css
@@ -1,1 +1,11 @@
-
+.mat-card{
+    border: 2px solid #4a1d00;
+}
+mat-card-actions{
+    text-align: right;
+}
+.mat-card-image:first-child{
+    width: 100%;
+    height: auto;
+    margin: auto;
+}
