--- a/src/styles.css
+++ b/src/styles.css
@@ -8,4 +8,11 @@ body{
   background-size: cover;
   background-attachment: fixed;
 }
+button.mat-button{
+  border: 1px solid #4a1d00;
+  background-color: #ffffff;
+}
+
+
+
 
