Изменены имена файлов изображений. Изменен вывод страницы выбора порцый кофе

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <mat-toolbar>
   <mat-toolbar-row>
-    <span>First Row</span>
+    <span>Coffee Time</span>
   </mat-toolbar-row>
 
   <mat-toolbar-row>
-    <span>Second Row</span>
+    <span>Закажи лучший кофе уже сейчас</span>
   </mat-toolbar-row>
 </mat-toolbar>
 
