--- a/src/app/componentns/order/order.component.html
+++ b/src/app/componentns/order/order.component.html
@@ -1,7 +1,43 @@
-<ul>
-  <li *ngFor="let item of listOrder">
-    {{item.title}} --> {{item.price}}
-  </li>
-</ul>
+<!--<ul>-->
+<!--  <li *ngFor="let item of listOrder">-->
+<!--    {{item.title}} &ndash;&gt; {{item.price}}-->
+<!--  </li>-->
+<!--</ul>-->
+<hr>
+<table mat-table [dataSource]="listOrder" class="mat-elevation-z8">
+
+  <!--- Note that these columns can be defined in any order.
+        The actual rendered columns are set as a property on the row definition" -->
+
+  <!-- Position Column -->
+<!--  <ng-container matColumnDef="position">-->
+<!--    <th mat-header-cell *matHeaderCellDef> No. </th>-->
+<!--    <td mat-cell *matCellDef="let element"> {{element.position}} </td>-->
+<!--  </ng-container>-->
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef> Name </th>
+    <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+  </ng-container>
+
+  <!-- Weight Column -->
+  <ng-container matColumnDef="price">
+    <th mat-header-cell *matHeaderCellDef> Price </th>
+    <td mat-cell *matCellDef="let element"> {{element.price}} </td>
+  </ng-container>
+
+  <!-- Symbol Column -->
+  <ng-container matColumnDef="symbol">
+    <th mat-header-cell *matHeaderCellDef> Symbol </th>
+    <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+
+
+
 
 <button mat-button routerLink="/">Заказать</button>
