--- a/src/app/componentns/order/order.component.html
+++ b/src/app/componentns/order/order.component.html
@@ -3,6 +3,8 @@
 <!--    {{item.title}} &ndash;&gt; {{item.price}}-->
 <!--  </li>-->
 <!--</ul>-->
+<button mat-button routerLink="/">Назад</button>
+<br/>
 <hr>
 <table mat-table [dataSource]="listOrder" class="mat-elevation-z8">
 
@@ -19,6 +21,11 @@
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef> Name </th>
     <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="sugar">
+    <th mat-header-cell *matHeaderCellDef> Sugar </th>
+    <td mat-cell *matCellDef="let element"> {{element['sugar']}} </td>
   </ng-container>
 
   <!-- Weight Column -->
