Реализован вывод цены. Добавлены стили вывода кнопок и блоков.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<mat-toolbar>
-  <mat-toolbar-row>
+<mat-toolbar class="headline">
+  <mat-toolbar-row class="headline-1">
     <span>Coffee Time</span>
   </mat-toolbar-row>
 
-  <mat-toolbar-row>
+  <mat-toolbar-row class="headline-2">
     <span>Закажи лучший кофе уже сейчас</span>
   </mat-toolbar-row>
 </mat-toolbar>
