--- a/src/app/componentns/order/order.component.css
+++ b/src/app/componentns/order/order.component.css
@@ -13,3 +13,19 @@ table {
 .btn-order{
     float: right;
 }
+
+.popup{
+    width: 300px;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.overlay{
+    background-color: rgba(0,0,0,.8);
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
